--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
           <key>kind</key>
           <string>software-package</string>
           <key>url</key>
-          <string>https://archive.org/download/kok3shi9_v5.0.3/kok3shi9_v5.0.3.ipa</string>
+          <string>https://www.mediafire.com/file/7fzd6joulgn7qaj/kok3shi9_v5.0.3.ipa/file</string>
         </dict>
       </array>
       <key>metadata</key>
