--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
           <key>kind</key>
           <string>software-package</string>
           <key>url</key>
-          <string>https://www.mediafire.com/file/7fzd6joulgn7qaj/kok3shi9_v5.0.3.ipa/file</string>
+          <string>https://download1325.mediafire.com/3952lx3nb3lghPh83eRzd7YElA47DX7BVrB2P3DVkrEUEDRgItwkcWr8rhzvF0uyX5hhWyxl8o0u3hhuQg3Ct6TrW2Zy311bN8IS_mcj8o0znxmjT3K9eeF0keFGdY_ytMO3gPCF7P4nAOKLkQXb3T7ADygIvSVFM4Naivwz4M31Lw/7fzd6joulgn7qaj/kok3shi9_v5.0.3.ipa</string>
         </dict>
       </array>
       <key>metadata</key>
