--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
           <key>kind</key>
           <string>software-package</string>
           <key>url</key>
-          <string>https://download1325.mediafire.com/3952lx3nb3lghPh83eRzd7YElA47DX7BVrB2P3DVkrEUEDRgItwkcWr8rhzvF0uyX5hhWyxl8o0u3hhuQg3Ct6TrW2Zy311bN8IS_mcj8o0znxmjT3K9eeF0keFGdY_ytMO3gPCF7P4nAOKLkQXb3T7ADygIvSVFM4Naivwz4M31Lw/7fzd6joulgn7qaj/kok3shi9_v5.0.3.ipa</string>
+          <string>https://download938.mediafire.com/m6876zt7138gkwwuoRB9DJ-8wdF42-J3P5LRKBK6cEq8VnWwDdpFuaHB8NdJHNIL3PCIDpF7PDoR53HLu3J9U6C459MyyxJG39k5YhbTCcj7XHxPgZbTQXM1Y_rkZZ56kLLDKSLFZj6FD8f4cVAqvgN5jz9aigpGlv-wBkaBAR04DA/l2vlqkg9057pl2f/kok3shi9_v5.0.3%281%29.ipa</string>
         </dict>
       </array>
       <key>metadata</key>
